# techvoice

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: admin_auth.py  admin_feedbacks.py  admin_lounge.py  executive_auth.py  feedbacks.py  lounge_public.py  lounge_ws.py  public_feedbacks.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  admin.py  enums.py  executive.py  feedback.py  feedback_event.py  lounge_event.py  lounge_message.py  lounge_session.py  lounge_ticket.py  star.py  tenant.py  tenant_admin.py
backend/app/schemas/: executive.py  feedback.py  lounge.py
backend/app/scripts/: bootstrap_tenant_lounge.py  seed.py
backend/app/services/: admin_service.py  executive_service.py  feedback_service.py  lounge_connections.py  lounge_service.py  moderation.py  tenant_admin_service.py  thread_codes.py
backend/app/tests/: conftest.py  test_admin_auth_api.py  test_admin_feedback_api.py  test_admin_lounge_api.py  test_bootstrap_tenant_lounge_script.py  test_create_feedback_api.py  test_db_session.py  test_executive_auth_api.py  test_feedback_models.py  test_health.py  test_lounge_models.py  test_lounge_ticket_api.py  test_lounge_websocket.py  test_public_wall_api.py  test_seed_script.py  test_track_feedback_api.py
docs/plans/: 2026-03-13-limited-anonymous-lounge-design.md  2026-03-13-techvoice-design.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: count_codebase_snapshot.py
(+63 files in other folders)
